allow data_keys and units on all data documents
