# nodejs-server/service/GridService.js
@@ -23,8 +23,10 @@ exports.findgrid = function(gridName,id,startDate,endDate,polygon,multipolygon,c
     examples['application/json'] = [ {
   "metadata" : "metadata",
   "data" : [ "", "" ],
+  "data_keys" : [ "data_keys", "data_keys" ],
   "_id" : "_id",
   "basin" : 0.8008281904610115,
+  "units" : [ "", "" ],
   "geolocation" : {
     "coordinates" : [ 0.8008281904610115, 0.8008281904610115 ],
     "type" : "type"
@@ -33,8 +35,10 @@ exports.findgrid = function(gridName,id,startDate,endDate,polygon,multipolygon,c
 }, {
   "metadata" : "metadata",
   "data" : [ "", "" ],
+  "data_keys" : [ "data_keys", "data_keys" ],
   "_id" : "_id",
   "basin" : 0.8008281904610115,
+  "units" : [ "", "" ],
   "geolocation" : {
     "coordinates" : [ 0.8008281904610115, 0.8008281904610115 ],
     "type" : "type"
