# nodejs-server/service/TcService.js
@@ -22,8 +22,10 @@ exports.findTC = function(id,startDate,endDate,polygon,multipolygon,center,radiu
     examples['application/json'] = [ {
   "metadata" : "metadata",
   "data" : [ "", "" ],
+  "data_keys" : [ "data_keys", "data_keys" ],
   "_id" : "_id",
   "basin" : 0.8008281904610115,
+  "units" : [ "", "" ],
   "record_identifier" : "record_identifier",
   "class" : "class",
   "geolocation" : {
@@ -34,8 +36,10 @@ exports.findTC = function(id,startDate,endDate,polygon,multipolygon,center,radiu
 }, {
   "metadata" : "metadata",
   "data" : [ "", "" ],
+  "data_keys" : [ "data_keys", "data_keys" ],
   "_id" : "_id",
   "basin" : 0.8008281904610115,
+  "units" : [ "", "" ],
   "record_identifier" : "record_identifier",
   "class" : "class",
   "geolocation" : {
